# crypto_ta

./: CMakeLists.txt  Makefile  README.md  run.sh
host/: Makefile  crypto_ta  main.c  my_crypto  tee_test.c  tee_test_vector.c  tee_test_vector.h
host/include/: tee_test.h  tee_test_vector.h
keymgmt_ta/: Makefile  keymgmt_ta.c  sub.mk
keymgmt_ta/include/: keymgmt_ta.h  user_ta_header_defines.h
ta/: Makefile  crypto_ta.c  my_crypto_ta.c  sub.mk  user_ta_header_defines.h
ta/include/: crypto_ta.h  my_crypto_ta.h  user_ta_header_defines.h
